# MDRC-PacBot-Legacy

./: .gitignore  .gitmodules  PacbotAStar.py  PacbotModule.py  PacbotNeat.py  PacmanAI.py  README.md  RobotOmniWheels.cpp  constants.py
2017-2018/RaspPi/: PacBotDecision.py  PacBotNEAT.py  PacbotAStar.py  PacbotBFS.py  PacbotModule.py  constants.py  variables.py
2018-2019/: PacbotModule.py  helper.py  pacbot.py
2018-2019/Arduino/: PID.h  Pinout.h  motors.h  pacbot2181.ino  sensors.h
2018-2019/ProtoNEAT/: config  field.py  helper.py  pacbot.py
2018-2019/RaspPi/: arduinoComm.py  commPacbot.py  config  field.py  helper.py  pacbot.py
2019-2020/botCode/: README.md  highLevelPacman.py
2019-2020/gameEngine/: server.py  visualize.py
2020-2021/botCode/: pacBFSHelper.py
2020-2021/gameEngine/: gameEngine.py
2021-2022/: data_analysis.py  vis_heuristic_vals.py
2021-2022/botCode/: HighLevelPackmanOrigininal.py  highLevelPacman.py  pacbotCommsModule.py  server.py  weights.txt
2021-2022/gameEngine/: gameEngine.py  (+2 more)
2023-2024/: UDP_light_test.py  UDP_server.py  packing_unpacking.py  server_test.py  socket_test.py  wifi_basic.py
2023-2024/pacbot-arduino/: .gitignore  Cargo.toml  README.md
2023-2024/pacbot-arduino/.cargo/: config.toml
2023-2024/pacbot-arduino/src/: main.rs  serial_messages.rs
Arduino/: PID.h  pacbot.ino
RaspPi/: ArduinoInterface.py  PacBotDecision.py  PacBotNEAT.py  PacbotAStar.py  PacbotModule.py  grid.py
robot_simulator/: PID_controller.py  Position.py  bot.py  bot_math.py  ghost.py  grid.py  path_tracker.py  pd_controller.py  simulator.py
(+191 files in other folders)
